Fix main nav height on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@ body, button {
 
 .main-nav {
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
